--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
+Header set Access-Control-Allow-Origin "*"
+
 Options All -Indexes
 RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+
